# static-wordle

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  TODO.md  top_100.txt
include/libwordle_core/: pattern.h  patterntable.h  wordlist.h
scripts/: find_optimal_opener.py
src/: CMakeLists.txt
src/builder/: CMakeLists.txt  builder.cpp  builder.h  entropy.cpp  entropy.h  main.cpp  state.cpp  state.h  threadpool.cpp  threadpool.h  verify.cpp  verify.h  writer.cpp  writer.h
src/libwordle_core/: CMakeLists.txt  pattern.cpp  patterntable.cpp  wordlist.cpp
src/solver/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
src/tools/: CMakeLists.txt  rank_openers.cpp
tests/: CMakeLists.txt  test_core.cpp
